@@ -451,7 +451,7 @@ Returns a file name. Can be used both as an instance and class method.
 
 sub create_filename4attrs {
   my ($self, $map, $end) = @_;
-  return sprintf '%i_%i%s%s%s',
+  return sprintf '%s_%s%s%s%s',
     $map->{'id_run'},
     $map->{'position'},
     $end ? "_$end" : q[],
