@@ -1,7 +1,6 @@
 package npg_qc::autoqc::role::rpt_key;
 
 use Moose::Role;
-use Carp;
 use List::MoreUtils qw/ uniq /;
 use Try::Tiny;
 use Readonly;
@@ -10,10 +9,6 @@ with 'npg_tracking::glossary::rpt';
 
 our $VERSION = '0';
 ## no critic (Documentation::RequirePodAtEnd)
-
-Readonly::Scalar our $RPT_KEY_DELIM => q[:];
-Readonly::Scalar our $RPT_KEY_MIN_LENGTH => 2;
-Readonly::Scalar our $RPT_KEY_MAX_LENGTH => 3;
 
 Readonly::Scalar my $LESS    => -1;
 Readonly::Scalar my $MORE    =>  1;
@@ -31,40 +26,84 @@ npg_qc::autoqc::role::rpt_key
 
 =head2 rpt_key
 
-A string concatenating id_run, position and tag index (where present)
+Rpt list string corresponding to a result object ($self).
 
 =cut
 sub rpt_key {
     my $self = shift;
-    return $self->can('composition') ?
-      $self->composition()->freeze2rpt() :
+    return $self->can('get_rpt_list') ?
+      $self->get_rpt_list() :
       $self->deflate_rpt();
 }
 
 =head2 lane_rpt_key_from_key
 
-Given an rpt key, retuens an rpt key for corresponding lane
+Given an rpt key, returns an rpt key for corresponding lane
 
 =cut
 sub lane_rpt_key_from_key {
     my ($self, $rpt_key) = @_;
-    my $h = $self->inflate_rpt_key($rpt_key);
-    return join $RPT_KEY_DELIM, $h->{'id_run'}, $h->{'position'};
+    my $h = $self->inflate_rpt($rpt_key);
+    delete $h->{'tag_index'};
+    return  $self->deflate_rpt($h);
+}
+
+=head2 rpt_list2one_hash
+
+Argument - rpt list string.
+Inflates the argument rpt list string to a list of hash references,
+each hash representing an individual rpt key, then performs map-reduce
+operation on the list. A single hash reference is returned.
+
+  use Data::Dumper;
+
+  print Dumper $obj->rpt_list2one_hash('1:2:3');
+  $VAR1 = {
+            'id_run' => '1',
+            'position' => '2',
+            'tag_index' => '3'
+          };
+  print Dumper $obj->rpt_list2one_hash('1:2:3;1:3:3');
+  $VAR1 = {
+            'id_run' => '1',
+            'position' => '2-3',
+            'tag_index' => '3'
+          }; 
+
+=cut
+sub rpt_list2one_hash {
+    my ($self, $rpt_list) = @_;
+    my $a = $self->inflate_rpts($rpt_list);
+    my $h = {};
+    if (@{$a} == 1) {
+        $h = $a->[0];
+    } else {
+        for my $name (qw/id_run position tag_index/) {
+            my @values = uniq map {defined $_->{$name} ? $_->{$name} : 'none'} @{$a};
+            if (@values > 1 || $values[0] ne 'none') {
+                $h->{$name} = join q[-], @values;
+            }
+        }
+    }
+    return $h;
 }
 
 =head2 inflate_rpt_key
 
-Extract id_run, position and tag_index from rpt key and return as a hash ref
+To retain backward compatibility, an alias for rpt_list2one_hash.
 
 =cut
 sub inflate_rpt_key {
     my ($self, $key) = @_;
-    return $self->inflate_rpt($key);
+    return $self->rpt_list2one_hash($key);
 }
+
 
 =head2 expand_rpt_key
 
-Extract id_run, position and tag_index from run-position-tag key and return as a readable string
+Argument - rpt list string.
+Converts a one-component rpt list string to a human-friendly description.
+For a multi-component rpt list returns the argument string without change.
 
 =cut
 sub expand_rpt_key {
@@ -73,9 +112,12 @@ sub expand_rpt_key {
     my $mapping = {id_run=>'run',position=>'lane',tag_index=>'tag',};
 
     my $map;
-    my $s = q[];
+    my $s = $key;
     try {
-        $map = $self->inflate_rpt_key($key);
+        my $a = $self->inflate_rpts($key);
+        if (@{$a} == 1) {
+            $map = $a->[0];
+        }
     };
     if (defined $map && scalar keys %{$map} >= 2 ) {
         $s = q[run ] . $map->{'id_run'} . q[ lane ] . $map->{'position'};
@@ -86,55 +128,38 @@ sub expand_rpt_key {
     return $s;
 }
 
-sub _compare_rpt_keys {
-
-    my $a_map = __PACKAGE__->inflate_rpt_key($a);
-    my $b_map = __PACKAGE__->inflate_rpt_key($b);
-
-    return $a_map->{'id_run'} <=> $b_map->{'id_run'} ||
-           $a_map->{'position'} <=> $b_map->{'position'} ||
-           ( (!exists $a_map->{'tag_index'} && !exists $b_map->{'tag_index'})  ? $EQUAL :
-             ( (exists $a_map->{'tag_index'}  && exists $b_map->{'tag_index'}) ?
-               ($a_map->{'tag_index'} <=> $b_map->{'tag_index'}) :
-               (!exists $a_map->{'tag_index'} ? $LESS : $MORE)
-             )
-	         );
-}
-
 sub _compare_rpt_keys_zero_last {
-  my $a_map = __PACKAGE__->inflate_rpt_key($a);
-  my $b_map = __PACKAGE__->inflate_rpt_key($b);
+    my $a_map = __PACKAGE__->rpt_list2one_hash($a);
+    my $b_map = __PACKAGE__->rpt_list2one_hash($b);
 
-  return $a_map->{'id_run'} <=> $b_map->{'id_run'} ||
-         $a_map->{'position'} <=> $b_map->{'position'} ||
-         _compare_tags_zero_last($a_map, $b_map);
+    return $a_map->{'id_run'} cmp $b_map->{'id_run'} ||
+           $a_map->{'position'} cmp $b_map->{'position'} ||
+           _compare_tags_zero_last($a_map, $b_map);
 }
 
 sub _compare_tags_zero_last {## no critic (RequireArgUnpacking)
   if ( !exists $_[0]->{'tag_index'} && !exists $_[1]->{'tag_index'} ) { return $EQUAL; }
   elsif ( exists $_[0]->{'tag_index'} && exists $_[1]->{'tag_index'} ) {
-    if( $_[0]->{'tag_index'} == 0 ) { return $MORE; }
-    elsif ( $_[1]->{'tag_index'} == 0 ) { return $LESS; }
-    else { return $_[0]->{'tag_index'} <=> $_[1]->{'tag_index'}; }
+    if( $_[0]->{'tag_index'} eq '0' ) { return $MORE; }
+    elsif ( $_[1]->{'tag_index'} eq '0' ) { return $LESS; }
+    else {
+      my $tia = $_[0]->{'tag_index'};
+      my $tib = $_[1]->{'tag_index'};
+      if ($tia !~ /[-]/xms && $tib !~ /[-]/xms) {
+        return $tia <=> $tib;
+      } else {
+        return $tia cmp $tib;
+      }
+    }
   } elsif ( !exists $_[0]->{'tag_index'} ) { return $LESS; }
   else { return $MORE; }
 }
 
-=head2 sort_rpt_keys
-
-Sorts the argument list and returns a sorted list
-
-=cut
-sub sort_rpt_keys {
-    my ($self, $keys) = @_;
-    my @a = sort _compare_rpt_keys @{$keys};
-    return @a;
-}
-
 =head2 sort_rpt_keys_zero_last
 
-Sorts the argument list and returns a sorted list with tag_index = 0 at the end
-of each group of run position tag_index.
+Sorts the argument list of hash reference of a type returned by expand_rpt_key
+method. Returns a sorted list with entries corresponding to tag index zero at
+the of each group of run, position, tag_index.
 
 =cut
 sub sort_rpt_keys_zero_last{
@@ -152,8 +177,8 @@ sub runs_from_rpt_keys {
     my ($self, $keys) = @_;
     my @ar = ();
     foreach my $key (@{$keys}) {
-      my $m = $self->inflate_rpt_key($key);
-      push @ar, $m->{'id_run'};
+      my $a = $self->inflate_rpts($key);
+      push @ar, (map { $_->{'id_run'} } @{$a});
     }
     @ar = sort { $a <=> $b } uniq @ar;
     return @ar;
@@ -174,15 +199,6 @@ sub has_plexes {
     return 0;
 }
 
-=head2 rpt_key_delim
-
-A string used to concatenate rpt_key
-
-=cut
-sub rpt_key_delim {
-    return $RPT_KEY_DELIM;
-}
-
 1;
 __END__
 
@@ -198,8 +214,6 @@ __END__
 =item Moose::Role
 
 =item Try::Tiny
-
-=item Carp
 
 =item Readonly
 
@@ -217,7 +231,7 @@ Marina Gourtovaia E<lt>mg8@sanger.ac.ukE<gt>
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2015 GRL
+Copyright (C) 2018 GRL
 
 This file is part of NPG.
 
