@@ -2,9 +2,12 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
 
  - queries to qc_store should always have support for tracking db look-up
  - methods for loading autoqc results moved from npg_qc::autoqc::collection
-   to npg_qc::autoqc::qc_store, unused public methods removed
+   to npg_qc::autoqc::qc_store
  - little-used method load_run of npg_qc::autoqc::qc_store class, which did
    not support propagation of tracking db handle, is removed
+ - unused public methods in npg_qc::autoqc namespace removed
+ - changes to allow for SeqQC display of results corresponding to multi-
+   component compositions
 
 release 65.2
  - add new metric mitochondrial genes content as mt_pct_tpm to RNA-SeQC check
